# shuba-scraper

./: .gitignore  Cargo.toml  README.md  page.html
playwright-service/: package.json  pnpm-lock.yaml  service.js
rust-client/: Cargo.toml
rust-client/src/: args.rs  chapter_helper.rs  http_client.rs  main.rs  save_helper.rs  service_invoker.rs
src/: main.rs  scraper.rs
