[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
chromiumoxide = { version = "0.5", features = ["tokio-runtime"] }
futures = "0.3"
clap = { version = "4.6.1", features = ["derive"] }
serde_json = "1.0.149"
regex = "1.12.3"
rand = "0.10.1"
indexmap = "2.14.0"
