[package]
name = "rust-client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
serde_json = "1.0.149"
clap = {version = "4.6.1", features = ["derive"]}
regex = "1.12.3"
scraper = "0.27.0"
indexmap = "2.14.0"
rand = "0.10.1"
